<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.omniocr.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="@dimen/dimen_15">

        <ImageView
            android:id="@+id/lion_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:src="@drawable/lion_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back"
            android:onClick="@{viewModel::onBackClicked}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lion_logo" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/ques_password"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lion_logo" />

        <TextView
            android:id="@+id/email_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/title_password_desc"
            android:textColor="@color/colorLightGrey"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginTop="28dp"
            android:background="@{viewModel.passwordLength > 0 ? @drawable/round_edittext_blue : @drawable/rounded_edittext_white}"
            android:fontFamily="@font/roboto"
            android:hint="@string/hint_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingLeft="@{viewModel.passwordLength >0 ? @dimen/dimen_10 : @dimen/dimen_10}"
            android:singleLine="true"
            android:textSize="@dimen/text_15sp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorLightGrey"
            app:addTextChangedListener="@{viewModel.getPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_instruction" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@{viewModel.isPasswordValid() ? @drawable/rounded_button_filled_blue : @drawable/rounded_corner_button}"
            android:clickable="@{viewModel.isPasswordValid() ? true : false}"
            android:onClick="@{viewModel::onLoginClicked}"
            android:text="@string/title_login"
            android:textAllCaps="false"
            android:textColor="@{viewModel.isPasswordValid() ? @color/colorWhite : @color/colorLightGrey}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/title_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>