<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.omniocr.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/parentCV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="@dimen/dimen_5"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_20">

                <TextView
                    android:id="@+id/homeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:padding="@dimen/dimen_20"
                    android:text="@string/title_capture_access"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/homeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:src="@drawable/ic_home_fragment_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

                <TextView
                    android:id="@+id/text_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_25"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_marginRight="@dimen/dimen_25"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:gravity="center"
                    android:text="@string/title_home_details"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="@dimen/text_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/homeIcon" />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_20"
                    android:background="@drawable/rounded_button_filled_blue"
                    android:fontFamily="@font/roboto"
                    android:onClick="@{viewModel::onAssessmentClicked}"
                    android:text="@string/title_start_new_accessment"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_desc" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="@dimen/dimen_5"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parentCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_20">

                <TextView
                    android:id="@+id/text_application"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/title_application"
                    android:textAllCaps="true"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="@dimen/text_12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:fontFamily="@font/roboto"
                    android:text="@string/title_your_application"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_application" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/title_application_details"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="@dimen/text_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/title_view_application"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="@dimen/text_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circular_text_view"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:gravity="center"
                    android:text="12"
                    android:textColor="@color/colorSkyBlue"
                    android:textSize="@dimen/text_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>