<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.omniocr.data.model.CameraModel" />

        <variable
            name="viewModel"
            type="com.omniocr.ui.review.ReviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_25"
        android:paddingBottom="@dimen/dimen_15">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::backClicked}"
            android:padding="@dimen/dimen_20"
            android:src="@drawable/ic_back_green"
            android:visibility="@{viewModel.isSelectClicked() ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neu_bold"
            android:onClick="@{viewModel::selectClicked}"
            android:padding="@dimen/dimen_10"
            android:text="@string/title_select"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_14sp"
            android:visibility="@{viewModel.isSelectClicked() || viewModel.isAllFormDeleted() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neu_bold"
            android:onClick="@{viewModel::cancellClicked}"
            android:padding="@dimen/dimen_10"
            android:text="@string/title_cancel"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_14sp"
            android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neu_bold"
            android:onClick="@{viewModel::onSelectAllClicked}"
            android:padding="@dimen/dimen_10"
            android:text="@string/title_select_all"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_14sp"
            android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button" />

        <TextView
            android:id="@+id/page_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_20sp"
            android:visibility="@{viewModel.isAllFormDeleted() ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <TextView
            android:id="@+id/text_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_20"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/title_review_images"
            android:textColor="@color/colorWhite"
            android:visibility="@{viewModel.isAllFormDeleted() ? View.GONE : View.VISIBLE, default = visible}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_count" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/bottom_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_review" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_10"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:background="@drawable/rounded_button_green"
                android:fontFamily="@font/roboto"
                android:onClick="@{viewModel.updateImageList.size()>0 ? viewModel::onNextClck : viewModel:: dontClick}"
                android:text="@string/title_send_document"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_14sp"
                android:visibility="@{viewModel.isSelectClicked() || viewModel.isAllFormDeleted() ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:background="@{viewModel.isSelectEnabled() ? @drawable/ic_delete_green : @drawable/ic_delete}"
                android:onClick="@{viewModel.isSelectEnabled() ? viewModel::deleteClicked : viewModel::notSelected}"
                android:padding="@dimen/dimen_10"
                android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/re_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:drawableLeft="@{viewModel.isSelectEnabled() || viewModel.isSelectAllClicked()? @drawable/ic_camera_recapture_green : @drawable/ic_camera_recapture}"
                android:drawablePadding="@dimen/dimen_5"
                android:onClick="@{viewModel.isSelectEnabled() ? viewModel::reCaptureImage : viewModel::disableClick}"
                android:text="@string/title_recapture"
                android:textColor="@{viewModel.isSelectEnabled() || viewModel.isSelectAllClicked() ? @color/colorGreen : @color/colorWhite}"
                android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/title_no_image_available"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18sp"
            android:visibility="@{viewModel.updateImageList.size()>0 ? View.GONE : View.VISIBLE, default = gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>